[gd_scene load_steps=44 format=2]

[ext_resource path="res://Enemies/wraith.gd" type="Script" id=1]
[ext_resource path="res://Enemies/wraith/wraith_move/Wraith8.atlastex" type="Texture" id=2]
[ext_resource path="res://Enemies/wraith/wraith_move/Wraith3.atlastex" type="Texture" id=3]
[ext_resource path="res://Enemies/wraith/wraith_move/Wraith12.atlastex" type="Texture" id=4]
[ext_resource path="res://Enemies/wraith/wraith_die/Wraith3.atlastex" type="Texture" id=5]
[ext_resource path="res://Enemies/wraith/wraith/Sprite4.atlastex" type="Texture" id=6]
[ext_resource path="res://Enemies/wraith/wraith/Sprite5.atlastex" type="Texture" id=7]
[ext_resource path="res://Enemies/wraith/wraith/Sprite.atlastex" type="Texture" id=8]
[ext_resource path="res://Enemies/wraith/wraith_move/Wraith10.atlastex" type="Texture" id=9]
[ext_resource path="res://Enemies/wraith/wraith_move/Wraith2.atlastex" type="Texture" id=10]
[ext_resource path="res://Enemies/wraith/wraith/Sprite7.atlastex" type="Texture" id=11]
[ext_resource path="res://Enemies/wraith/wraith_die/Wraith5.atlastex" type="Texture" id=12]
[ext_resource path="res://Enemies/wraith/wraith/Sprite6.atlastex" type="Texture" id=13]
[ext_resource path="res://Enemies/wraith/wraith_die/Wraith4.atlastex" type="Texture" id=14]
[ext_resource path="res://Enemies/wraith/wraith_die/Wraith6.atlastex" type="Texture" id=15]
[ext_resource path="res://Enemies/wraith/wraith_move/Wraith4.atlastex" type="Texture" id=16]
[ext_resource path="res://Enemies/wraith/wraith_move/Wraith5.atlastex" type="Texture" id=17]
[ext_resource path="res://Enemies/wraith/wraith/Sprite3.atlastex" type="Texture" id=18]
[ext_resource path="res://Enemies/wraith/wraith_move/Wraith11.atlastex" type="Texture" id=19]
[ext_resource path="res://Enemies/wraith/wraith_die/Wraith8.atlastex" type="Texture" id=20]
[ext_resource path="res://Enemies/wraith/wraith_die/Wraith7.atlastex" type="Texture" id=21]
[ext_resource path="res://Enemies/wraith/wraith_move/Wraith6.atlastex" type="Texture" id=22]
[ext_resource path="res://Enemies/wraith/wraith_move/Wraith7.atlastex" type="Texture" id=23]
[ext_resource path="res://Enemies/wraith/wraith/Sprite2.atlastex" type="Texture" id=24]
[ext_resource path="res://Enemies/wraith/wraith_die/Wraith9.atlastex" type="Texture" id=25]
[ext_resource path="res://Enemies/wraith/wraith_move/Wraith.atlastex" type="Texture" id=26]
[ext_resource path="res://Enemies/wraith/wraith_die/Wraith.atlastex" type="Texture" id=27]
[ext_resource path="res://Enemies/wraith/wraith_move/Wraith9.atlastex" type="Texture" id=28]
[ext_resource path="res://Enemies/wraith/wraith_move/Wraith13.atlastex" type="Texture" id=29]
[ext_resource path="res://Enemies/wraith/wraith_die/Wraith2.atlastex" type="Texture" id=30]
[ext_resource path="res://PlayerDetectionZone.tscn" type="PackedScene" id=31]
[ext_resource path="res://Shadows/LargeShadow.png" type="Texture" id=32]
[ext_resource path="res://Hit_Hurt_Boxes/HurtBox.tscn" type="PackedScene" id=33]
[ext_resource path="res://stats.tscn" type="PackedScene" id=34]
[ext_resource path="res://Hit_Hurt_Boxes/HurtBox.gd" type="Script" id=35]
[ext_resource path="res://Hit_Hurt_Boxes/HitBox.tscn" type="PackedScene" id=36]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 18 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 2.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 30 ), ExtResource( 5 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 21 ), ExtResource( 25 ), ExtResource( 20 ) ],
"loop": true,
"name": "wraith_die",
"speed": 4.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 10 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 29 ), ExtResource( 16 ), ExtResource( 22 ), ExtResource( 17 ), ExtResource( 23 ), ExtResource( 2 ), ExtResource( 28 ), ExtResource( 19 ), ExtResource( 9 ) ],
"loop": true,
"name": "wraith_move",
"speed": 2.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 2.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8.25002, 14 )

[sub_resource type="CircleShape2D" id=8]
radius = 377.619

[sub_resource type="Theme" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.505882, 0.0862745, 0.0862745, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0431373, 0.0392157, 0.0392157, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.894118, 0.905882, 0.470588, 0.490196 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0509804, 0.0470588, 0.0470588, 1 )
border_blend = true

[node name="Wraith" type="KinematicBody2D" groups=["MiniMap_Enemies"]]
position = Vector2( 0, -12 )
collision_layer = 0
collision_mask = 256
script = ExtResource( 1 )

[node name="LargeShadow" type="Sprite" parent="."]
position = Vector2( -2.38419e-07, 9 )
scale = Vector2( 0.875, 0.4 )
texture = ExtResource( 32 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.666667, 0.666667 )
frames = SubResource( 1 )
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="HurtBox" parent="." instance=ExtResource( 33 )]
collision_layer = 16
collision_mask = 2
script = ExtResource( 35 )

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -4.76837e-07 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="HurtBox"]

[node name="PlayerDet" parent="." instance=ExtResource( 31 )]
position = Vector2( 0, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDet"]
shape = SubResource( 8 )

[node name="StateTimer" type="Timer" parent="."]
autostart = true

[node name="HitBox" parent="." instance=ExtResource( 36 )]
collision_layer = 64
collision_mask = 4
damage = 3

[node name="HitboxTimerBlink" type="Timer" parent="HitBox"]
autostart = true

[node name="HitboxTimer" type="Timer" parent="HitBox"]
autostart = true

[node name="stats" parent="." instance=ExtResource( 34 )]
max_health = 65

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -19.0
margin_top = -19.0
margin_right = 18.0
margin_bottom = -15.0
theme = SubResource( 5 )
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
max_value = 65.0
value = 65.0
percent_visible = false

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="area_exited" from="HurtBox" to="." method="_on_HurtBox_area_exited"]
[connection signal="timeout" from="HurtBox/Timer" to="HurtBox" method="_on_Timer_timeout"]
[connection signal="timeout" from="StateTimer" to="." method="_on_StateTimer_timeout"]
[connection signal="timeout" from="HitBox/HitboxTimerBlink" to="." method="_on_HitboxTimerBlink_timeout"]
[connection signal="timeout" from="HitBox/HitboxTimer" to="." method="_on_HitboxTimer_timeout"]

[editable path="HurtBox"]
[editable path="PlayerDet"]
[editable path="HitBox"]
